fix small size of video on mobile

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -558,7 +558,7 @@ a:hover {
 
 .gallery-item iframe {
 	max-width: 100%;
-	width: auto;
+	width: 100%;
 	height: auto;
 	max-height: 90vh;
 	aspect-ratio: 16 / 9;
@@ -683,6 +683,15 @@ a:hover {
 	
 	.gallery-item img {
 		max-height: 70vh;
+	}
+	
+	.gallery-item iframe {
+		width: 100% !important;
+		height: calc(100vw * 9 / 16) !important;
+		max-height: 70vh !important;
+		min-height: 200px;
+		aspect-ratio: 16 / 9;
+		border: none;
 	}
 	
 	.project-description {
